--- a/setup/istio-installation.yaml
+++ b/setup/istio-installation.yaml
@@ -1,50 +1,17 @@
-apiVersion: maistra.io/v1
+apiVersion: maistra.io/v2
 kind: ServiceMeshControlPlane
 metadata:
   name: workshop-install
 spec:
-
-  istio:
-    global:
-      proxy:
-        resources:
-          requests:
-            cpu: 100m
-            memory: 128Mi
-          limits:
-            cpu: 500m
-            memory: 128Mi
-
-    gateways:
-      istio-ingressgateway:
-        autoscaleEnabled: false
-        ior_enabled: false
-
-    mixer:
-      policy:
-        autoscaleEnabled: false
-
-      telemetry:
-        autoscaleEnabled: false
-        resources:
-          requests:
-            cpu: 100m
-            memory: 1G
-          limits:
-            cpu: 500m
-            memory: 4G
-
-    pilot:
-      autoscaleEnabled: false
-      traceSampling: 100
-
-    kiali:
-      enabled: false
-
+  tracing:
+    type: None
+  addons:
     grafana:
       enabled: true
-
-    tracing:
+      install: {}
+    kiali:
+      name: kiali
       enabled: false
-      jaeger:
-        template: all-in-one
+      install: {}
+    prometheus:
+      enabled: true
